k8s/uat/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: uat
  name: waondo-react-client
  annotations:
    kubernetes.io/ingress.class: nginx
#    certmanager.k8s.io/cluster-issuer: "letsencrypt-staging"
spec:
  rules:
    - host: client.waondosecondary.xyz
      http:
        paths:
          - path: /
            backend:
              serviceName: waondo-react-client
              servicePort: 80
